<resources>
    <string name="app_name">Capstone Project</string>
    <string name="tap_next">Tap Next</string>
    <string name="logo_description">logo description</string>
    <string name="wellcome">Wellcome</string>
    <string name="choose_your_role">Choose Your Role!</string>
    <string name="pedagang">Pedagang</string>
    <string name="buyer">Buyer</string>
    <string name="back_button">back_button</string>
    <string name="create_your">Create your</string>
    <string name="account">account</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="your_merchandise_name">Your Merchandise Name</string>
    <string name="enter_your_merchandise_name">enter your merchandise name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="register">Register</string>
    <string name="already_an_account">Already an account</string>
    <string name="register_button">register button</string>
    <string name="code">Code</string>
    <string name="verification">Verification</string>
    <string name="enter_the_4_digit_code_sent_to_your_email">Enter the 4-digit code sent to your email!</string>
    <string name="didn_t_receive_the_verification_otp">Didn\'t receive the verification OTP?</string>
    <string name="resend_again">Resend again</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">enter otp</string>
    <string name="welcome">Hi,</string>
    <string name="user_name">Rahma</string>
    <string name="weather_message">Hujan-hujan begini, yuk nikmati makanan hangat yang bikin hati nyaman!</string>
    <string name="text_content_cuaca">Hujan-hujan gini, ada rekomendasi makanan untukmu nih!</string>
    <string name="categories">Categories</string>
    <string name="weather_match">Weather Match</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="top_product">Top Product</string>
    <string name="recommendations">Recommendation</string>
    <string name="profile_picture_description">profile_picture_description</string>
    <string name="all_product">All Product</string>
    <string name="click_here">Click Here</string>
    <string name="weather">Sunny</string>
    <string name="temperatur">30</string>
    <string name="suhu">°C</string>
    <string name="city_name">Subang</string>
    <string name="location_icon">location icon</string>
    <string name="nama_makanan">Soto</string>
    <string name="rating">4.5</string>
    <string name="rating_star_icon">Rating Star Icon</string>
    <string name="status_dagangan">Buka</string>
    <string name="jarak">1.5 km</string>
    <string name="harga">15.000</string>
    <string name="rupiah">Rp</string>
    <string name="image_desc">image desc</string>
    <string name="forgot">Forgot</string>
    <string name="forgot_password">Password</string>
    <string name="verify_button">Tombol Verifikasi</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="button_forgot_password">button forgot password</string>
    <string name="enter_your_new_password">Enter your new password!</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="txt_new_password">New Password</string>
    <string name="button_new_password">button new password</string>
    <string name="log_in">Log In</string>
    <string name="log_in_to_your">Log in to your</string>
    <string name="ket_forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="login_button">login button</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="nama_icon">Icon Name </string>
    <string name="arrow_icon">Arrow Icon </string>
    <string name="email_icon">Icon Email </string>
    <string name="password_icon">Icon Password </string>
    <string name="phone_icon">Icon Phone </string>
    <string name="address_icon">Icon Address </string>
    <string name="profil">Profile </string>
    <string name="username">Rania Maulidina </string>
    <string name="show_profil">Show Profile </string>
    <string name="change_email">Email </string>
    <string name="change_password">Change Password </string>
    <string name="no_handphone">No.Handphone </string>
    <string name="address">Address </string>
    <string name="log_out">Log out </string>
    <string name="detail_produk_title">Product Details</string>
    <string name="default_product_name">Product Name</string>
    <string name="default_product_price">Rp 10.000</string>
    <string name="default_rating">4.5</string>
    <string name="rating_icon">Rating Icon</string>
    <string name="default_merchant_name">Merchant Name</string>
    <string name="default_address">Jl. Lorem Ipsum No. 123</string>
    <string name="distance_icon">Distance Icon</string>
    <string name="status_open">Open</string>
    <string name="status_closed">Closed</string>
    <string name="description_label">Deskription</string>
    <string name="default_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec magna a libero.</string>
    <string name="see_seller">See Seller</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="loading_please_wait">Loading, please wait...</string>
</resources>