<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".otp.OtpRegisterActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg_header_rounded"
            android:padding="25dp">

            <TextView
                android:id="@+id/txtCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="6dp" />

            <TextView
                android:id="@+id/txtVerification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtCode"
                android:layout_alignStart="@id/txtCode"
                android:text="@string/verification"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:text="@string/enter_the_4_digit_code_sent_to_your_email" />

                <EditText
                    android:id="@+id/etOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:padding="15dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/enter_otp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/didn_t_receive_the_verification_otp"
                    android:textSize="14sp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtResendOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_again"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/blue"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/register_button_selector"
            android:padding="10dp"
            android:text="@string/verify"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </LinearLayout>
</layout>
