<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF"
        tools:context=".login.LoginActivity">

        <!-- Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg_header_rounded"
            android:padding="25dp">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_to_your"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="6dp" />

            <TextView
                android:id="@+id/txtAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_below="@id/txtLogin"
                android:layout_marginStart="6dp" />
        </RelativeLayout>

        <!-- Content -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="24dp">

                <!-- Email -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="4dp"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="4dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Forgot Password -->
                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/ket_forgot_password"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    android:textColor="#000000" />

                <!-- Login Button -->
                <com.dicoding.projectcapstone.ui.MyButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="24dp"
                    android:padding="10dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/log_in"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>

                <!-- Footer -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_account"
                        android:textSize="14sp"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textSize="14sp"
                        android:textColor="@color/blue"
                        android:layout_marginStart="4dp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
